[gd_scene load_steps=2 format=3 uid="uid://bvdmm053lui0n"]

[ext_resource type="Script" uid="uid://dudiaotggrrr" path="res://addons/swift_godot_editor_plugin/swift_godot_plugin_panel.gd" id="1_4vghk"]

[node name="SwiftGodotPluginPanel" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_4vghk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="RecompileButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Recompile Swift"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "No status"

[node name="LogLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Log:"

[node name="Log" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_following = true
